# unimnim

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  test
.github/workflows/: test.yaml
tools/: .gitignore  Makefile  m17n-test.c
unimnim/: __init__.py  coverage.py  coverage_test.py  data.py  data_test.py  input_method.py  input_method_test.py  m17n_test.py  main.py  main_test.py
unimnim/data/: Arab.toml  Bopo.toml  Bugi.toml  Buhd.toml  Cher.toml  Cyrl.toml  Deva.toml  Ethi.toml  Goth.toml  Grek.toml  Hang.toml  Hano.toml  Hebr.toml  Hrkt.toml  Latn.toml  Ogam.toml  Osma.toml  README.md  Runr.toml  Sund.toml  Tagb.toml  Tfng.toml  Thaa.toml  Vith.toml  Yiii.toml  arabic.toml  cyrillic.toml  gothic.toml  greek.toml  hanunoo.toml  hebrew.toml  latin.toml  ogham.toml  runic.toml
unimnim/data/common/: control.toml  format.toml  mark.toml  math.toml  punctuation.toml  separator.toml  tag_sequence.toml
unimnim/data/common/symbol/: arrow.toml  currency.toml  math.toml  music.toml  other.toml  regional_indicator.toml
unimnim/templates/: examples.html.jinja  m17n.mim.jinja
